--- a/style.css
+++ b/style.css
@@ -35,6 +35,7 @@ html {
 body {
     min-height: 100%;
     background-color: black;
+    overflow: hidden;
 
 }
 /*endregion*/
@@ -150,6 +151,8 @@ div.WindowTopOptions{
     width: 100%;
     height: 5%;
     background-color: var(--main_border_color);
+
+    -webkit-user-drag: none;
 
     display: flex;
     align-items: center;
