*Modified window dragging code to work with IFrames *Added Iframes to each window app, to allow work to start on filling each with content *Added placeholder loading gif for incomplete apps *Added resume to the resume application works as intended on Chrome, but unsure on Firefox (Force browser pdf viewer?) *Forcing Favicon via link so that it works on Github pages

--- a/style.css
+++ b/style.css
@@ -193,6 +193,12 @@ button.MinimizeWindow{
     border-color: #9ccc65;
     border-radius: 40%;
 }
+
+iframe.Application {
+    width: 100%;
+    height: 95%;
+    border: none;
+}
 /*endregion*/
 
 /*OS Values*/
