Attempt to add Spellbound Demo, may need to be rolled back

--- a/style.css
+++ b/style.css
@@ -226,7 +226,7 @@ button.ShortcutHolder {
     background-color: transparent;
 }
 img.ShortcutIcon {
-    image-rendering: auto;
+    image-rendering: crisp-edges;
     aspect-ratio: 1/1;
     height: 66%;
 }
