--- a/Retro/style.css
+++ b/Retro/style.css
@@ -122,6 +122,7 @@ img.buttonIcon {
     max-height: 100%;
 
     user-select: none;
+    -webkit-user-drag: none;
 
 }
 
@@ -229,6 +230,7 @@ img.ShortcutIcon {
     image-rendering: crisp-edges;
     aspect-ratio: 1/1;
     height: 66%;
+    -webkit-user-drag: none;
 }
 p.ShortcutTitle {
     margin: 0;
