Major Refactor and Work done: -Changed Directorys to better reflect the seperated Retro and Simplified views -Changed most buttons in Simple view to Anchors -Added Subdirectories for the pages in Simple view -Moved Header in Simple view to a Javascript file to allow it to not appear on Iframes and reuse in multiple HTML files -Added photo, and two paragraphs to About Me (Still needs hobby/creative paragraph) -Style changes -Updated Spellbound Demo to work better in WebGL as well as fix some bugs that appeared

--- a/Retro/style.css
+++ b/Retro/style.css
@@ -210,7 +210,7 @@ iframe.Application {
 
 
     background-color: white;
-    background-image: url("/OS_img/Background.png");
+    background-image: url("/Retro/OS_img/Background.png");
     image-rendering: pixelated;
 
     background-size: cover;
