--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ html, body, div, button {
 body, div, button {
     color: var(--text_color);
     font-family: "Roboto Light", sans-serif;
-    font-size: clamp(10px, 3vmin, 120%);
+    font-size: clamp(10px, 4vmin, 30px);
 }
 
 html {
@@ -27,9 +27,9 @@ html {
 }
 
 body {
-    min-height: 100%;
+
     background-color: var(--web_background);
-    overflow: hidden;
+
 
 }
 
@@ -45,14 +45,22 @@ body {
 #RetroButton {
     background-color: white;
     color: black;
-    position: relative;
-    float: right;
+    position: absolute;
+    right: 0;
+    top: 50%;
+    transform: translateY(-50%);
     border-radius: 50%;
     font-size: clamp(10px, 3vmin, 100%);
     height: 7vmin;
     border-style: groove ridge ridge groove;
     border-width: 1vmin;
     border-color: #e0e0e0;
+    text-align: center;
+    cursor: pointer;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
 
 
 
@@ -65,18 +73,23 @@ body {
 
 }
 #PersonalLogo {
-    width: clamp(3vmin, 10%, 8vmin);
+    width: clamp(3vmin, 10%, 10vmin);
     margin-left: 1%;
     -webkit-user-drag: none;
 }
 
 
-button.QuickBarButton {
+a.QuickBarButton {
     background-color: var(--web);
     width: max-content;
     flex-grow: 1;
     border-width: 10px 10px;
     border-style: solid;
+    text-align: center;
+    text-decoration: none !important;
+    color: white;
+    cursor: pointer;
+    display: inline-block;
 
     border-image: linear-gradient(var(--web_background), var(--web), var(--web_background)) 30;
 
@@ -89,5 +102,13 @@ button.QuickBarButton {
     width: 90%;
     padding: 1vmin;
     background-color: #355d03;
+    justify-items: center;
 }
+div.MultiContent{
+    display: flex;
+    flex-direction: row;
 
+}
+div.MultiContent > *{
+    flex: 1;
+}
