--- a/style.css
+++ b/style.css
@@ -1,114 +1,177 @@
-/* Normal view page CSS */
+
+/* PAGE COLOR SCHEME */
 
 :root {
-    --web: #173d02;
-    --web_background: #062601;
-    --web_border: #4b348a;
-    --web_button: #937fbb;
-    --web_button_highlight: #aa96d0;
-    --web_button_shadow: #8675b6;
+    --main_color: #6c4ac3;
+    --main_BG_color: #5a3da4;
+    --main_border_color: #4b348a;
+    --button_main: #937fbb;
+    --button_highlight: #aa96d0;
+    --button_shadow: #8675b6;
 
     --text_color: white;
     --text_shadow: black;
 }
 
+/*Default Values for the page*/
+/*#region*/
+
 html, body, div, button {
     margin: 0;
     border-width: 0;
 }
-body, div, button {
+p {
     color: var(--text_color);
     font-family: "Roboto Light", sans-serif;
-    font-size: clamp(10px, 4vmin, 30px);
+    font-size: clamp(10px, 3vmin, 200%);
+
+    -webkit-font-smoothing: antialiased;
 }
 
 html {
     height: 100%;
-}
 
+}
 body {
-
-    background-color: var(--web_background);
-
+    min-height: 100%;
+    background-color: black;
+    overflow: hidden;
 
 }
+/*endregion*/
 
-/*Header Values*/
+/*Button Bar Values*/
+/*region*/
 
-#Header {
+div.WindowsBar {
+    background-color: var(--main_color);
+    position: fixed;
+    bottom: 0;
     width: 100%;
-    height: 25%;
+    height: 8vh;
+    display: flex;
+    align-items: center;
+
+    border-top: 3px outset var(--main_BG_color);
 
 
 }
 
-#RetroButton {
-    background-color: white;
-    color: black;
-    position: absolute;
+div.buttonMargin {
+    width: 1vw;
+}
+
+div.BarOSInfo {
+    height: 8vh;
+    width: 15%;
+    position: fixed;
     right: 0;
-    top: 50%;
-    transform: translateY(-50%);
-    border-radius: 50%;
-    font-size: clamp(10px, 3vmin, 100%);
-    height: 7vmin;
-    border-style: groove ridge ridge groove;
-    border-width: 1vmin;
-    border-color: #e0e0e0;
-    text-align: center;
-    cursor: pointer;
+    background-color: var(--main_BG_color);
+
+
+    border-width: 6px;
+    border-left-style: groove;
+    border-bottom-left-radius: 2vw;
+    border-top-left-radius: 2vw;
+    border-left-color: var(--main_border_color);
+
     display: flex;
-    flex-direction: column;
+    align-items: center;
     justify-content: center;
 
-
-
-
 }
 
-#QuickBar {
-    width: 100%;
-    display: flex;
-    flex-direction: row;
+#datetime {
+    color: var(--text_color);
 
-}
-#PersonalLogo {
-    width: clamp(3vmin, 10%, 10vmin);
-    margin-left: 1%;
-    -webkit-user-drag: none;
-}
-
-
-a.QuickBarButton {
-    background-color: var(--web);
-    width: max-content;
-    flex-grow: 1;
-    border-width: 10px 10px;
-    border-style: solid;
+    font-size: clamp(10px, 2vmin, 30px);
+    user-select: none;
     text-align: center;
-    text-decoration: none !important;
-    color: white;
-    cursor: pointer;
-    display: inline-block;
-
-    border-image: linear-gradient(var(--web_background), var(--web), var(--web_background)) 30;
 
 }
 
-/* Content Values */
+button.ButtonBarSel {
+    background-color: var(--button_main);
+    border-width: 6px;
+    border-bottom-color: var(--button_shadow);
+    border-right-color: var(--button_shadow);
+    border-left-color: var(--button_highlight);
+    border-top-color: var(--button_highlight);
 
-#content {
-    margin: auto;
-    width: 90%;
-    padding: 1vmin;
-    background-color: #355d03;
-    justify-items: center;
-}
-div.MultiContent{
+    margin-left: 0.5vw;
+    width: 15%;
+    height: 85%;
+
     display: flex;
-    flex-direction: row;
+    align-items: center;
+    overflow: hidden;
 
 }
-div.MultiContent > *{
-    flex: 1;
+
+div.buttonIconHolder {
+    margin-left: min(5%, 10px);
+    margin-right: min(1%, 10px);
+
+    height: 75%;
+    aspect-ratio: 1/1;
+
+
 }
+
+img.buttonIcon {
+    max-height: 100%;
+
+    user-select: none;
+    -webkit-user-drag: none;
+
+}
+
+p.buttonTitle {
+    width: 75%;
+    text-align: left;
+}
+/*endregion*/
+
+/*Window Opened Values*/
+/*region*/
+
+
+/*endregion*/
+
+/*OS Values*/
+/*region*/
+
+#display {
+    height: 92vh;
+
+
+    background-color: white;
+    background-image: url("/Retro/OS_img/Background.png");
+    image-rendering: pixelated;
+
+    background-size: cover;
+    background-position: bottom;
+}
+
+button.ShortcutHolder {
+
+    height: 125px;
+    width: 100px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: transparent;
+}
+img.ShortcutIcon {
+    image-rendering: crisp-edges;
+    aspect-ratio: 1/1;
+    height: 66%;
+
+}
+p.ShortcutTitle {
+    margin: 0;
+    font-size: 16px;
+}
+
+
+/*endregion*/
