--- a/Templates/TaskBarButton.html
+++ b/Templates/TaskBarButton.html
@@ -1,4 +1,47 @@
 <template id="TaskBarButton">
+  <style>
+    button.TaskBarButton {
+      background-color: var(--button_main);
+      border-width: 6px;
+      border-bottom-color: var(--button_shadow);
+      border-right-color: var(--button_shadow);
+      border-left-color: var(--button_highlight);
+      border-top-color: var(--button_highlight);
+
+      margin-left: 0.5vw;
+      width: 15%;
+      height: 85%;
+
+      display: flex;
+      align-items: center;
+      overflow: hidden;
+
+    }
+
+    div.TBIconHolder {
+      margin-left: min(5%, 10px);
+      margin-right: min(1%, 10px);
+
+      height: 75%;
+      aspect-ratio: 1/1;
+
+
+    }
+
+    img.TBIcon {
+      max-height: 100%;
+
+      user-select: none;
+      -webkit-user-drag: none;
+
+    }
+
+    p.TBTitle {
+      width: 75%;
+      text-align: left;
+    }
+
+  </style>
   <button type="button" class="TaskBarButton">
     <div class="TBIconHolder">
       <img class="TBIcon" draggable="false">=
